--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,41 +7,49 @@
     android:background="@drawable/background_girl"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="403dp"
-        android:layout_height="172dp"
-        android:gravity="center"
-        android:orientation="vertical"
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="320dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/choose_image"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Choose Clothing"
+        app:layout_constraintTop_toBottomOf="@id/image_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <Button
+        android:id="@+id/upload_image"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Upload Clothes"
+        app:layout_constraintTop_toBottomOf="@id/choose_image"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"/>
+
+    <Button
+        android:id="@+id/retrive_image"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="Retrieve Image of Clothing"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints">
-
-        <ImageView
-            android:id="@+id/image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp" />
-
-        <Button
-            android:id="@+id/choose_image"
-            android:layout_width="369dp"
-            android:layout_height="wrap_content"
-            android:text="Choose Clothing" />
-
-        <Button
-            android:id="@+id/upload_image"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
-            android:text="Upload Clothes" />
-
-        <Button
-            android:id="@+id/retrive_image"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
-            android:text="Retrive Image of Clothing" />
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@id/upload_image"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
